@@ -352,6 +352,7 @@ wxCaretSuspend *        O_NON_WXOBJECT_THR
 wxWindowDisabler *      O_NON_WXOBJECT_THR
 wxBusyCursor *          O_NON_WXOBJECT_THR
 wxBusyInfo *            O_NON_WXOBJECT_THR
+wxTimerRunner *         O_NON_WXOBJECT_THR
 
 wxLayoutConstraints *   O_WXOBJECT
 wxIndividualLayoutConstraint * O_WXOBJECT
